--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="container">
-        <img src="/images/image 9.png" alt="logo" />
+        <img src="./images/image 9.png" alt="logo" />
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
