--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           </ul>
         </div>
         <div class="image">
-          <img src="/images/Rectangle 30.png" alt="solar panel" />
-          <img src="images/Frame 7.png" class="img" alt="">
+          <img src="./images/Rectangle 30.png" alt="solar panel" />
+          <img src="./images/Frame 7.png" class="img" alt="">
         </div>
       </div>
     </section>
@@ -102,7 +102,7 @@
         <div class="boxes">
           <div class="product">
             <img
-              src="/images/solar-panels-meadow 2 (2).png"
+              src="./images/solar-panels-meadow 2 (2).png"
               alt="solar panel"
             />
             <div>
@@ -118,7 +118,7 @@
 
           <div class="product">
             <img
-              src="/images/solar-panels-meadow 2 (1).png"
+              src="./images/solar-panels-meadow 2 (1).png"
               alt="solar panel"
             />
             <div>
@@ -132,7 +132,7 @@
             </div>
           </div>
           <div class="product">
-            <img src="/images/solar-panels-meadow 2.png" alt="solar panel" />
+            <img src="./images/solar-panels-meadow 2.png" alt="solar panel" />
             <div>
               <h3>Hybrid</h3>
               <p>
@@ -167,7 +167,7 @@
       <div class="container">
         <div class="comls">
           <div class="coml">
-            <img src="/images/zap-fast.png" alt="zap-fast icon" />
+            <img src="./images/zap-fast.png" alt="zap-fast icon" />
             <h2>Energy Innovators - the products we love</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur. Suspendisse suspendisse
@@ -176,7 +176,7 @@
           </div>
           <div class="coml">
             <div class="card">
-              <div><img src="/images/image 9.png" alt="solar panel" /></div>
+              <div><img src="./images/image 9.png" alt="solar panel" /></div>
               <h3>SoliTek - The European Manufacturer of Solar Panels</h3>
               <p>
                 We work closely importing solar panels from SoliTek, they offer
@@ -186,7 +186,7 @@
               <a href="#">View Products <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="card">
-              <div><img src="/images/image 9.png" alt="solar panel" /></div>
+              <div><img src="./images/image 9.png" alt="solar panel" /></div>
               <h3>SoliTek - The European Manufacturer of Solar Panels</h3>
               <p>
                 We work closely importing solar panels from Solitek, they offer
@@ -198,7 +198,7 @@
           </div>
           <div class="coml">
             <div class="card">
-              <div><img src="/images/image 9.png" alt="solar panel" /></div>
+              <div><img src="./images/image 9.png" alt="solar panel" /></div>
               <h3>SoliTek - The European Manufacturer of Solar Panels</h3>
               <p>
                 We work closely importing solar panels from Solitek, they offer
@@ -208,7 +208,7 @@
               <a href="#">View Products <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="card">
-              <div><img src="/images/image 9.png" alt="solar panel" /></div>
+              <div><img src="./images/image 9.png" alt="solar panel" /></div>
               <h3>SoliTek - The European Manufacturer of Solar Panels</h3>
               <p>
                 We work closely importing solar panels from Solitek, they offer
@@ -230,7 +230,7 @@
         </div>
         <div class="boxes">
           <div class="value">
-            <img src="/images/Customer Loyalty.svg" alt="img" />
+            <img src="./images/Customer Loyalty.svg" alt="img" />
 
             <h3>Customer Care</h3>
             <p>
@@ -241,7 +241,7 @@
             </p>
           </div>
           <div class="value">
-            <img src="/images/Price Tag.png" alt="img" />
+            <img src="./images/Price Tag.png" alt="img" />
 
             <h3>Price</h3>
             <p>
@@ -253,7 +253,7 @@
             </p>
           </div>
           <div class="value">
-            <img src="/images/Environment.svg" alt="img" />
+            <img src="./images/Environment.svg" alt="img" />
 
             <h3>sustainability</h3>
             <p>
@@ -273,7 +273,7 @@
 <div class="container">
 
   <div class="content">
-    <img src="images/“.svg" alt="">
+    <img src="./images/“.svg" alt="">
     <h2>What they say about 
       WOC
     </h2>
@@ -289,16 +289,16 @@
               </div> 
 
               <div class="dot">
-                  <i><img src="images/Ellipse 1.svg" alt=""></i>
-                  <i><img src="images/Ellipse 1.svg" alt=""></i>
-                  <i><img src="images/Ellipse 1.svg" alt=""></i>
-                  <i><img src="images/Ellipse 1.svg" alt=""></i>
+                  <i><img src="./images/Ellipse 1.svg" alt=""></i>
+                  <i><img src="./images/Ellipse 1.svg" alt=""></i>
+                  <i><img src="./images/Ellipse 1.svg" alt=""></i>
+                  <i><img src="./images/Ellipse 1.svg" alt=""></i>
               </div>
            </div>
     
     <div class="user">
       <div>
-      <img src="/images/EDITED-27 - Copy 1.png" alt="user" />
+      <img src="./images/EDITED-27 - Copy 1.png" alt="user" />
 
         <div>
           <h4>John Doe</h4>
@@ -306,8 +306,8 @@
         </div>
       </div>
       <div class="arrow">
-      <img src="images/Group 17.png" alt="">
-      <img src="images/Group 18.png" alt="">
+      <img src="./images/Group 17.png" alt="">
+      <img src="./images/Group 18.png" alt="">
       </div>
   </div>
 </div>
@@ -318,7 +318,7 @@
       <div class="container">
         <div class="top">
           <div class="left">
-            <img src="images/image 9.png" alt="">
+            <img src="./images/image 9.png" alt="">
             <ul>
               <li>About</li>
               <li>Careers</li>
